--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-# Camryn A Davis: Data Science Portfolio
-## Camryn A Davis
-### Contact
-[email](camryn.davis@bison.howard.edu) | [LinkedIn](https://www.linkedin.com/in/camryn-davis-53476820a/) | 
-[GitHub](https://github.com/camrynadavis)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Camryn A Davis: Data Science Portfolio</title>
+</head>
+<body>
+  <h1>Camryn A Davis: Data Science Portfolio</h1>
 
-View my CV: [2025 CV Camryn Davis](2025_Digital_Resume.html)
+  <h2>Camryn A Davis</h2>
 
-Analyzing the correlation between youth sports participation opportunities and accessibility of recreational facilities. 
+  <h3>Contact</h3>
+  <p>
+    <a href="mailto:camryn.davis@bison.howard.edu">Email</a> |
+    <a href="https://www.linkedin.com/in/camryn-davis-53476820a/">LinkedIn</a> |
+    <a href="https://github.com/camrynadavis">GitHub</a>
+  </p>
 
-In the most recent State of Play report conducted by the Aspen Institute, key findings suggested a connection between income 
-and sports participation. For instance, while states such as Vermont, New Hampshire, Iowa, and Maine reported the highest 
-percentage of youth sports participation (over 63%), some of the poorest states in the U.S. – New Mexico, Mississippi, Louisiana – 
-reported below average participation (under 54%). More youth are returning to sports post-COVID, but opportunities for sports 
-participation and physical activity seem to be dependent on various socioeconomic and geographic factors. This is analyzed through 
-utilizing GIS. 
-([Youth Sports Participation Analysis](https://storymaps.arcgis.com/stories/34633c37b44b4d9bbca2e345a0021947))
+  <p>View my CV: <a href="2025_Digital_Resume.html">2025 CV Camryn Davis</a></p>
+
+  <p>Analyzing the correlation between youth sports participation opportunities and accessibility of recreational facilities.</p>
+
+  <p>
+    In the most recent State of Play report conducted by the Aspen Institute, key findings suggested a connection between income
+    and sports participation. For instance, while states such as Vermont, New Hampshire, Iowa, and Maine reported the highest
+    percentage of youth sports participation (over 63%), some of the poorest states in the U.S. – New Mexico, Mississippi, Louisiana –
+    reported below average participation (under 54%). More youth are returning to sports post-COVID, but opportunities for sp
