--- a/index.html
+++ b/index.html
@@ -24,4 +24,10 @@
     In the most recent State of Play report conducted by the Aspen Institute, key findings suggested a connection between income
     and sports participation. For instance, while states such as Vermont, New Hampshire, Iowa, and Maine reported the highest
     percentage of youth sports participation (over 63%), some of the poorest states in the U.S. – New Mexico, Mississippi, Louisiana –
-    reported below average participation (under 54%). More youth are returning to sports post-COVID, but opportunities for sp
+    reported below average participation (under 54%). More youth are returning to sports post-COVID, but opportunities for sports 
+    participation and physical activity seem to be dependent on various socioeconomic and geographic factors.
+  </p>
+
+  <p><a href="https://storymaps.arcgis.com/stories/34633c37b44b4d9bbca2e345a0021947">Youth Sports Participation Analysis</a></p>
+</body>
+</html>
