--- a/2025_Digital_Resume.html
+++ b/2025_Digital_Resume.html
@@ -29,4 +29,26 @@
   </ul>
   <br>
   <h1>Work Experience</h1>
-  <b>Mezz Entertainment</b><br>  
+  <b>Mezz Entertainment</b><br>
+    New York City, NY. May 2022 - present<br>
+    Digital Marketer<br>
+  <ul>
+    <li>Create branding materials and collaborate on projects to increase engagement across various social media platforms.</li>
+    <li>Implement SEO practices, edit the company website, and supervise a group of interns.</li>
+  </ul>
+  <br>
+  <b>Little Lights</b><br>
+    Washington, DC. Aug 2024 - Present<br>
+    Academic Tutor<br>
+  <ul>
+    <li>Tutor children aged 7-14 in ELA, math, and additional subjects for 2+ hours twice a week.</li>
+  </ul>
+  <br>
+  Sweet Streets LA<br>
+    Los Angeles, CA. Oct 2022 - Jan 2023<br>
+    Administrative Intern<br>
+  <ul>
+    <li>Assisted with the setup and operation of ‘The Last Unicorn: 40th Anniversary’ art show at Corey Helford Gallery.</li>
+    <li>Accommodated visiting artists and managed equipment, props, and inventory using Microsoft Excel.</li>
+  </ul>
+  
